# uszparser

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  data  pyproject.toml  requirements.txt  settings  settings.json  setup.cfg  setup.py  test.json  uszparser.py
settings/: full.json  interface.json
uszparser/: __init__.py  __main__.py  _version.py  lib.py  uszparser.py
