[build-system]
requires = [
	"setuptools >= 61",
	"setuptools_scm",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "uszparser"
description = "Small program for parsing an Excel file of USZ patients."
authors = [
	{name = "Roman Ludwig", email = "roman.ludwig@usz.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["scripts", "lymph", "lyprox"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "tqdm",
    "openpyxl",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/rmnldwg/uszparser"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "isort",
    "pycln",
    "pylint",
]

[project.scripts]
uszparser = "uszparser:main"

[tool.setuptools.packages.find]
include = ["uszparser"]

[tool.setuptools_scm]
write_to = "uszparser/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = {attr = "uszparser._version.version"}

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pycln]
all = true
